--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "vscode": "^1.1.37"
   },
   "vsce": {
-    "baseImagesUrl": "https://my.custom/base/images/url",
+    "baseImagesUrl": "https://github.com/BeneHa/folder-colors.git",
     "dependencies": true,
     "yarn": false
   }
